# previous-major-projects

./: .gitignore  LICENSE  README.md
DesigningGinRummy/: DesignPatternClassDIagrams.vsdx  GinRummy.fig  SOLID_Principles_Dalrymple.pptx
DesigningGinRummy/DiagramsAndStoryboarding/: Algorithms.vsdx  CRCCards.vsdx  ClassDIagrams.vsdx  SequenceDiagrams.vsdx  UseCasesFlowchart.vsdx
DesigningGinRummy/EarnShardsForCards/: EarnShardsForCards.sln  docker-compose.dcproj  docker-compose.override.yml  docker-compose.yml
DevonDalrympleUnitConverter.MVC/: DevonDalrympleUnitConverter.MVC.csproj  DevonDalrympleUnitConverter.MVC.sln  Program.cs  Startup.cs
DevonDalrympleUnitConverter.MVC/Controllers/: ConversionsController.cs  FruitController.cs  HomeController.cs
DevonDalrympleUnitConverter.MVC/Models/: ErrorViewModel.cs
DevonDalrympleUnitConverter.MVC/Properties/: launchSettings.json
DevonDalrympleUnitConverter.MVC/ViewModels/: Values.cs
DevonDalrympleUnitConverter.MVC/Views/: _ViewImports.cshtml
FreeCell/: .classpath  .project
LabyrinthOfDevon/: .project
TimTomTimothysDineDash/: RequestTemplate..txt  TimTomTimothysDineDash.sln  docker-compose.NoSpa.yml  docker-compose.ReactSPA.yml  docker-compose.dcproj  docker-compose.override.yml  docker-compose.yml  docker-flyway.config  production.fenv
devonium_weather/: README.md  pubspec.yaml
psuedo_fs/: Cargo.toml  disk-image.json  ex.txt
psuedo_fs/src/: block.rs  directory.rs  disk.rs  disk_driver.rs  disk_driver_kit.rs  file_system.rs  inode.rs  json_device_driver.rs  main.rs  super_block.rs  xml_device_driver.rs
(+1690 files in other folders)
