[package]
name = "psuedo_fs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.22.0", features = [ "serialize" ] }
array-init = "2.0.0"
serde_with = "1.11.0"

# serde-xml-rs = "0.5.1"